# url_shortener

./: .gitignore  Makefile  ruff.toml
.github/workflows/: server-ci.yml
server/: .coveragerc  .env.test  .gitignore  .pre-commit-config.yaml  Makefile  alembic.ini  config.py  crud.py  database.py  docker-compose.test.yml  keygen.py  main.py  models.py  pyproject.toml  pytest.ini  ruff.toml  schemas.py
server/alembic/: env.py
server/alembic/versions/: 04d78d97baeb_add_created_at_column.py  393542dfe827_initial_schema.py
server/app/: __init__.py  main.py
server/app/api/: crud.py  deps.py
server/app/api/routes/: admin.py  urls.py
server/app/core/: config.py  database.py
server/app/models/: url.py
server/app/schemas/: __init__.py  url.py
server/app/utils/: keygen.py
server/migrations/: 001_add_created_at.sql
server/tests/: conftest.py  test_admin_info_endpoint.py  test_create_url_endpoint.py  test_database.py  test_delete_url_endpoint.py  test_e2e.py  test_keygen.py  test_main_helpers.py  test_redirect_endpoint.py  test_root_endpoint.py  test_root_main.py
server/tests/api/routes/: test_admin.py  test_create_url.py  test_custom_key.py  test_peek.py
server/tests/e2e/: test_e2e.py
shortener_app/: crud.py  database.py  main.py
